[metadata]
name = ima_vae
version = 0.0.1
author = Patrik Reizinger, Luigi Gresele, Dominik Zietlow, Julius von Kügelgen, Michel Besserve
author_email = prmedia17@gmail.com
description = Connecting IMA and VAEs
license_file = LICENSE
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpatrik96/ima-vae
project_urls =
    Bug Tracker = https://github.com/rpatrik96/ima-vae
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=0

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    W504  # Line break occurred after a binary operator
    F401  # Module imported but unused
    F841  # Local variable name is assigned to but never used
    W605  # Invalid escape sequence 'x'

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


